# spacebot

./: .gitignore  .version  README.md  pyproject.toml  space_auto_invite_bot.py
spacebot/: __main__.py  authz.py  bot.py  callbacks.py  config.py  invites.py  utils.py  validation.py  versioning.py
spacebot/commands/: __init__.py  autoinvite.py  help.py  invite.py  rooms.py  status.py  unblock.py
spacebot/securitytests/: spacebot_test_commands.md
spacebot/storage/: __init__.py  database.py
tests/: test_autoinvite_add_validation.py  test_dispatch_security.py  test_validation.py
